--- a/app/src/main/res/layout/layout_setting.xml
+++ b/app/src/main/res/layout/layout_setting.xml
@@ -15,13 +15,13 @@
 		
 	    
 	    <Button
-	        android:id="@+id/activity_main_button_addItem"
+	        android:id="@+id/activity_main_button_save"
 	        android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:layout_marginTop="10dp"
         	android:layout_marginLeft="10dp"
         	android:layout_marginRight="10dp"
-	        android:onClick="addItem"
+	        android:onClick="save"
 	        android:background="@color/ui_background"
 	        android:minWidth="0dp"
 	        android:minHeight="0dp"
@@ -29,7 +29,7 @@
 	        android:paddingRight="10dp"
 	        android:paddingTop="5dp"
 	        android:paddingBottom="5dp"
-	        android:text="추가"
+	        android:text="저장"
 	        android:textColor="@color/ui_foreground" />
         
     </LinearLayout>
